--- a/index.html
+++ b/index.html
@@ -821,19 +821,19 @@
           <div class="hover single-video-play">
             <a href="/static/img/video1.mp4" class="video-play-btn mfp-iframe"><i class="fa fa-play"></i></a>
           </div>
-          <img src="/static/img/videothumb1.jpg" alt="Feedback" style="border-radius: 20px" />
+          <img src="static/img/1.png" alt="Feedback" style="border-radius: 20px" />
         </div>
         <div class="video-container">
           <div class="hover single-video-play">
             <a href="/static/img/video2.mp4" class="video-play-btn mfp-iframe"><i class="fa fa-play"></i></a>
           </div>
-          <img src="/static/img/videothumb2.jpg" alt="Feedback" style="border-radius: 20px" />
+          <img src="static/img/2.png" alt="Feedback" style="border-radius: 20px" />
         </div>
         <div class="video-container">
           <div class="hover single-video-play">
-            <a href="/static/img/video1.mp4" class="video-play-btn mfp-iframe"><i class="fa fa-play"></i></a>
+            <a href="/static/img/video3.mp4" class="video-play-btn mfp-iframe"><i class="fa fa-play"></i></a>
           </div>
-          <img src="/static/img/videothumb1.jpg" alt="Feedback" style="border-radius: 20px" />
+          <img src="static/img/3.png" alt="Feedback" style="border-radius: 20px" />
         </div>
       </div>
     </div>
